# filingsage

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ingest-cron.yml
deploy/: README-fly.md
deploy/worker/: fly.toml
docs/: filingsage-spec.md
migrations/: env.py
migrations/versions/: 4022a38c1042_core_tables_companies_filings_events.py
src/filingsage/: __init__.py  cli.py  config.py
src/filingsage/api/: main.py
src/filingsage/connectors/: __init__.py  base.py  edgar.py  models.py
src/filingsage/db/: events.py  models.py  session.py
src/filingsage/parsing/: html.py  sections.py  silver.py
src/filingsage/worker/: celery_app.py  tasks.py
tests/: test_api.py  test_db.py  test_edgar.py  test_healthz.py  test_pipeline.py  test_silver.py
tests/fixtures/: sample_10q.htm  sample_8k.htm
